# scene-rs

./: .travis.yml  Cargo.toml  Makefile  README.md
examples/asteroids/: Cargo.toml  main.rs
examples/asteroids/sys/: draw.rs
src/: ces.rs  lib.rs  macros.rs  test.rs
src/ces/: Cargo.toml  lib.rs  mod.rs
src/ecs/: Cargo.toml  lib.rs  test.rs
src/examples/asteroids/: Cargo.toml  event.rs  game.rs  main.rs  world.rs
src/examples/asteroids/sys/: aster.rs  bullet.rs  control.rs  draw.rs  inertia.rs  physics.rs
src/examples/simple/: Cargo.toml  main.rs
src/gltf/: Cargo.toml  lib.rs  parse.rs  types.rs
src/render/: Cargo.toml  lib.rs
src/tests/: ces.rs
