[package]

name = "gltf"
version = "0.1.0"
authors = [
]

[lib]
name = "gltf"
path = "lib.rs"


[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.serde]
git = "https://github.com/kvark/rust-serde"

[dev_dependencies.gfx_gl]
git = "https://github.com/gfx-rs/gfx_gl.git"
