[package]

name = "asteroids"
version = "0.1.0"
authors = [
	"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[[bin]]
name = "asteroids"
path = "main.rs"

[dependencies.scenegraph]
path = "../../.."

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs.git"

[dependencies.gl-init-rs]
git = "https://github.com/tomaka/gl-init-rs.git"
