[package]

name = "asteroids"
version = "0.1.0"
authors = [
	"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[[bin]]
name = "asteroids"
path = "main.rs"

[dependencies.scenegraph]
path = "../../.."

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.ncollide2df32]
git = "https://github.com/sebcrozet/ncollide"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gl_init]
git = "https://github.com/tomaka/gl-init-rs.git"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
